[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "sphinx-conestack-theme"
description = "Mobile friendly Bootstrap 5 based Sphinx theme"
version = "1.0.2.dev0"
requires-python = ">=3.9"
license = { text = "BSD 2-Clause License" }
authors = [
    { name = "Cone Contributors", email = "dev@conestack.org" },
]
keywords = [
    "Sphinx",
    "conestack",
    "theme",
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "Sphinx==8.1.3",
]
dynamic = ["readme"]

[project.entry-points."sphinx.html_themes"]
conestack = "sphinx_conestack_theme"

[project.urls]
Homepage = "https://conestack.github.io/sphinx-conestack-theme"
Code = "https://github.com/conestack/sphinx-conestack-theme"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGES.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "LICENSE.rst"

[tool.hatch.build.targets.wheel]
packages = ["sphinx_conestack_theme"]
exclude = [
    "sphinx_conestack_theme/conestack/scss",
]

[tool.zest.releaser]
create-wheel = true
